--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
 		"@iconify-json/fluent": "^1.2.4",
 		"@neodrag/svelte": "^2.0.6",
 		"@sveltejs/adapter-cloudflare": "^4.7.3",
-		"@sveltejs/kit": "^2.20.6",
+		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/eslint": "^9.6.1",
-		"eslint": "^9.12.0",
+		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
 		"fluent-svelte": "^1.6.0",
@@ -43,11 +43,23 @@
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.10.0",
-		"unplugin-icons": "0.19.3",
+		"unplugin-icons": "22.5.0",
 		"vite": "^5.4.21"
 	},
 	"lint-staged": {
 		"*": "prettier --write --ignore-unknown --plugin-search-dir=."
+	},
+	"pnpm": {
+		"overrides": {
+			"node-forge": ">=1.3.2",
+			"validator": ">=13.15.22",
+			"esbuild": ">=0.25.0",
+			"prismjs": ">=1.30.0",
+			"nanoid": ">=3.3.8",
+			"brace-expansion": ">=2.0.2",
+			"@eslint/plugin-kit": ">=0.3.4",
+			"cookie": ">=0.7.0"
+		}
 	},
 	"engines": {
 		"pnpm": ">=8",
